[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eumech-turtle"
version = "0.2.0"
description = "Standalone EuMech trace viewers (GUI + ASCII)"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
eumech-turtle = "eumech_turtle_viewer:main"
eumech-turtle-ascii = "eumech_turtle_ascii:main"

[tool.setuptools]
py-modules = ["eumech_turtle_viewer", "eumech_turtle_ascii"]
